docs(article): improved create article docs
